[gd_scene load_steps=15 format=3 uid="uid://d20bpp2gj5dlt"]

[ext_resource type="Script" path="res://Scripts/door_and_button.gd" id="1_17ox6"]
[ext_resource type="Texture2D" uid="uid://bk7v3j6erqrif" path="res://Assets/platform_metroidvania asset pack v1.01/miscellaneous sprites/buttom.png" id="1_k8osb"]
[ext_resource type="Texture2D" uid="uid://dnxife4vfcudh" path="res://Assets/platform_metroidvania asset pack v1.01/miscellaneous sprites/strange_door_closed_anim_strip_10.png" id="2_jgkmq"]
[ext_resource type="Texture2D" uid="uid://b5nmhoupghbd0" path="res://Assets/platform_metroidvania asset pack v1.01/miscellaneous sprites/buttom_pressed.png" id="3_ww2n8"]
[ext_resource type="Texture2D" uid="uid://cxkiv8dkky6a3" path="res://Assets/platform_metroidvania asset pack v1.01/miscellaneous sprites/strange_door_opening_anim_strip_14.png" id="4_mvlh8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66ex4"]
size = Vector2(16, 0.800002)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dlm8"]
size = Vector2(14.1819, 2.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjtmf"]
size = Vector2(12, 48)

[sub_resource type="Animation" id="Animation_whteh"]
resource_name = "ButtonDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ww2n8")]
}

[sub_resource type="Animation" id="Animation_8xtjy"]
resource_name = "ButtonUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_k8osb")]
}

[sub_resource type="Animation" id="Animation_gwsln"]
resource_name = "DoorClosed"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jgkmq")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Door:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Door/Door/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0426098),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6rw25"]
resource_name = "DoorOpen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_mvlh8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Door:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 13]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Door/Door/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4cxrd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_k8osb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Door:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jgkmq")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Door:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Door/Door/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvrqk"]
_data = {
"ButtonDown": SubResource("Animation_whteh"),
"ButtonUp": SubResource("Animation_8xtjy"),
"DoorClosed": SubResource("Animation_gwsln"),
"DoorOpen": SubResource("Animation_6rw25"),
"RESET": SubResource("Animation_4cxrd")
}

[node name="Door and Button" type="Node2D"]
script = ExtResource("1_17ox6")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5

[node name="Button" type="Sprite2D" parent="."]
position = Vector2(3, -3)
scale = Vector2(1.375, 2.5)
texture = ExtResource("1_k8osb")

[node name="Button" type="StaticBody2D" parent="Button"]
position = Vector2(0, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Button"]
position = Vector2(0, 0.800001)
shape = SubResource("RectangleShape2D_66ex4")

[node name="Area2D" type="Area2D" parent="Button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2(0, -0.8)
shape = SubResource("RectangleShape2D_2dlm8")

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(48, -13)
texture = ExtResource("2_jgkmq")
hframes = 10

[node name="Door" type="StaticBody2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Door"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_rjtmf")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xvrqk")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Button/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Button/Area2D" to="." method="_on_area_2d_body_exited"]
